# scg

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: examples.cpp
src/geometry/: arc.cpp  arc.h  b_spline.h  box.cpp  box.h  depth_field.cpp  depth_field.h  direction.h  extern_triangulate.cpp  extern_triangulate.h  extrusion.cpp  extrusion.h  homogeneous_transformation.cpp  homogeneous_transformation.h  line.cpp  line.h  matrix.cpp  matrix.h  mesh_operations.cpp  mesh_operations.h  octree.h  offset.cpp  offset.h  parametric_curve.h  plane.cpp  plane.h  point.cpp  point.h  polygon.cpp  polygon.h  polygon_3.cpp  polygon_3.h  polyline.cpp  polyline.h  rigid_arrangement.h  ring.h  rotation.cpp  rotation.h  spline_sampling.cpp  spline_sampling.h  (+21 more)
src/system/: parse_stl.cpp  parse_stl.h
src/utils/: algorithm.h  arena_allocator.cpp  arena_allocator.h  check.h  constrained_partition.h  grouping.h  partition.h  relation.h  selection.h
test/: arc_tests.cpp  axis_field_tests.cpp  extrusion_tests.cpp  fem_tests.cpp  line_tests.cpp  matrix_tests.cpp  mesh_tests.cpp  plane_tests.cpp  point_tests.cpp  polygon_tests.cpp  polyline_tests.cpp  ring_tests.cpp  rotation_tests.cpp  spline_tests.cpp  surface_tests.cpp  triangle_tests.cpp  voxel_volume_tests.cpp
test/stl-files/: SlicedCone.stl
